2007-09-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-contactSearchAction]): only return the records which have an
	email set.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-trashInContext:_ctx]): no longer expunge the mailbox after
	marking a message deleted.
	([SOGoMailObject -moveToFolderNamed:folderNameinContext:]): same
	as above.

	* UI/MailerUI/UIxMailView.m ([-deleteAction]): removed method.
	([-trashAction]): moved method into UIxMailActions.
	([-moveAction]): moved method into UIxMailActions.

2007-09-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([_UIxHTMLMailContentHandler
	-endElement:_localNamenamespace:_nsrawName:_rawName]): remove HTML
	comments from the CSS code, do not add the CSS code to the body
	content and remove references of body from the CSS declarations.
	([UIxMailPartHTMLViewer -cssContent]): new accessor method.
	([UIxMailPartHTMLViewer -flatContentAsString]): separated code
	common with cssContent in a different method and invoke it only
	once.

	* UI/MainUI/SOGoRootPage.[hm]: made a subclass of UIxComponent
	instead of UIxPageFrame.

2007-09-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MainUI/SOGoRootPage.m ([-defaultAction]): commented out.
	([-appendToResponse:responseinContext:ctx]): commented out.
	([SOGoRootPage -connectURL]): new accessor that returns the full
	url the the "connect" method.
	([-connectAction]): rewrote method to return a properly formatted
	auth. cookie based on the username and password passed as
	parameter.

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage -logoffAction]):
	set the value of the cookie to "discard" and set its expiration
	date to yesterday.

	* SoObjects/SOGo/SOGoWebAuthenticator.m ([SOGoWebAuthenticator
	-preprocessCredentialsInContext:context]): consider the user
	anonymous if the cookie value is "discard".
	([SOGoWebAuthenticator